gobmkida/g3/atari_atari_find_attack_moves
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/atari_atari_find_attack_moves/src/engine/combination.c:1337:24: error: use of undeclared identifier 'target_comp_func'
gg_sort( v8, v7, 4uLL, target_comp_func); 
                       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/atari_atari_find_attack_moves/src/engine/combination.c:1340:32: error: use of undeclared identifier 'move_comp_func'
gg_sort( attacks, v5, 0x14uLL, move_comp_func); 
                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/atari_atari_find_attack_moves/src/obj/1/combination.o] Error 1
